--- a/index.html
+++ b/index.html
@@ -269,8 +269,7 @@
                             雨宮さんの事務所の下の階にあるカフェで働いてる</p>
                             <p>通過シナリオ：<br>
                                 <span class="frommarker">・同居人 HO助手 (KP:なおしまさん)</span><br>
-                                ・ごぜんにじにあいにきて。(KPC)<br>
-                                ・1:15 (KP:はぎさん)</p>
+                                ・ごぜんにじにあいにきて。(KPC)</p>
                             <p>//Oct. 2021</p>
                     </div>
                 </div>
