--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <div id="splash">
-            <div id="splash-logo">ローディング</div>
+            <div id="splash-logo">Loading......</div>
         </div>
         <div class="splashbg"></div>
         <div id="container">
