--- a/index.html
+++ b/index.html
@@ -151,8 +151,11 @@
                             酒そこそこ強い</p>
                             <p>通過シナリオ：<br>
                                 <span class="frommarker">・来世で会おう HO2 魔王 (KP:ゆたさん)</span><br>
-                                ・キスせえ (KPC)</p><br>
-                                ・四畳半のアクアリウム (KPC)
+                                ・キスせえ (KPC)<br>
+                                ・四畳半のアクアリウム (KPC)<br>
+                                ・君のためのヒポクリシー (KPC)<br>
+                                ・まよなかあくじ (KPC)
+                            </p>
                                 <p>//Aug. 2021</p>
                     </div>
                 </div>
@@ -278,7 +281,8 @@
                         
                         <p>通過シナリオ：<br>
                             <span class='frommarker'>・サイレン清掃会社 HO2 傷物 (KP:十文字さん)</span><br>
-                            ・ハッピーサファ―――！ (KP:十文字さん)
+                            ・ハッピーサファ―――！ (KP:十文字さん)<br>
+                            ・銀蝋と怪盗団 (KP:十文字さん)
                         </p>
                         <p>//Jan. 2022</p>
                     </div>
@@ -328,7 +332,9 @@
                             目つきが悪くて子供泣かせる<br>
                             めっちゃ酒強い</p>
                         <p>通過シナリオ：<br>
-                            <span class='frommarker'>・MOON GIFTED HO1 選ばれた者 (KP:十文字さん)</span>
+                            <span class='frommarker'>・MOON GIFTED HO1 選ばれた者 (KP:十文字さん)</span><br>
+                            ・ジャルダン・マルスより、 (KP:十文字さん)<br>
+                            ・楽園藪谷合戦城 (KP:十文字さん)
                         </p>
                         <p>//Mar. 2022</p>
                     </div>
@@ -401,7 +407,8 @@
                             「今日は人来ないでしょ！」って謎の自信が持つことある<br>
                             よく∪berEats頼む、辛いもの好き</p>
                         <p>通過シナリオ：<br>
-                            <span class='frommarker'>・SMILE KILLER (KP:パン粉さん)</span>
+                            <span class='frommarker'>・SMILE KILLER (KP:パン粉さん)</span><br>
+                            ・とかく幼児化したKPCが探索者を困らせる話 (KPC)
                         </p>
                         <p>//Jun. 2022</p>
                     </div>
