--- a/index.html
+++ b/index.html
@@ -414,6 +414,30 @@
                     </div>
                 </div>
             </div>
+            <div id="haruIntro" class='modal'>
+                <a href="#" class="modalOverlay" aria-label="Close modal"></a>
+                <div class="modalContent">
+                    <a href="#" class="modalClose" aria-label="Close modal">&times</a>
+                    <div class="introImg">
+                        <img src="img/bustup/haru.png" alt="">
+                    </div>
+                    <div class="introText">
+                        <div class="name"><ruby><rb>卯月榛</rb><rp>(</rp><rt>うづき はる</rt><rp>)</rp></ruby></div>
+                        <p>STR 13 / CON 10 / POW 17 / DEX 12<br>
+                        APP 11 / SIZ 13 / INT 16 /EDU 16<br>
+                        <span>特徴表：鋭い洞察力、芸術的才能</span></p>
+                        <p>日本人/刑事/42歳/172cm</p>
+                        <p>私/君/呼び捨て</p>
+                        <p>刑事の中で大分のんびりしている方で、よく署内のソファで寝てる<br>
+                            ほぼ署内に住んでるでも過言ではない。<br>
+                            最近やっと家に帰ったらしい。</p>
+                        <p>通過シナリオ：<br>
+                            <span class='frommarker'>・庭師は何を口遊む (KP:パン粉さん)
+                        </p>
+                        <p>//Dec. 2022</p>
+                    </div>
+                </div>
+            </div>
             <a href="#"><img id="backToTop" src="img/Logo-r.png" alt="" title='Back to top.'></a>
             <div id='top'>
                 myo's TRPG memo
@@ -557,6 +581,13 @@
                         <img src="img/tachie/honoka-alt.png" alt="">
                         <img src="img/tachie/honoka.png" alt="">
                         <img src="img/trimed/honoka-trimed.jpg" alt="">
+                    </div>
+                </a>
+                <a href="#haruIntro">
+                    <div class='charaHover CoC2' id='haru' data-category="CoC2">
+                        <img src="img/tachie/haru-alt.png" alt="">
+                        <img src="img/tachie/haru.png" alt="">
+                        <img src="img/trimed/haru-trimed.jpg" alt="">
                     </div>
                 </a>
             </div>
